src/test/deca/context/invalid/mauvais_type_string.deca
//ERROR :4:
{
  int x=4;
  String s=x;


}